--- a/7.0/cap-1/livraria/login.html
+++ b/7.0/cap-1/livraria/login.html
@@ -8,7 +8,7 @@
 	<p>Enter your details to login:</p>
 	<form action="authenticate.php" method="post">
 		<label>Username</label>
-		<input type="text" name="Username">
+		<input type="text" name="username">
 		<label>Password</label>
 		<input type="password" name="password">
 		<input type="submit" name="Login">
